i18n strings updated, blacklist turned to whitelist

--- a/config/locales/af.yml
+++ b/config/locales/af.yml
@@ -203,8 +203,8 @@ af:
     my recent_activity:                         "My Onlangse Aktiwiteite"
     started following:                          "Het Begin Volg"
     subscribed to plan:                         "Gebruikers Ingeteken op %{plan}"
-    reading:                                    "Gebruikers Wat Hierdie Plan Volg"    
-    subscribed previously:                      "Het %{time ago} begin"
+    reading:                                    "Gebruikers Wat Hierdie Plan Volg"
+    subscribed previously:                      "Het %{time_ago} begin"
     sign in for settings:                       "Teken asb. in om toegang tot jou profiel te verkry."
     my profile:                                 "My Profiel"
     edit profile:                               "Wysig Profiel"
@@ -218,6 +218,8 @@ af:
     edit devices:                               "Gekoppelde Toestelle"
     edit account_existence:                     "Sluit Rekening"
     delete account button:                      "Sluit My YouVersion Rekening"
+    no devices:                                 "Geen toestelle gekoppel aan jou YouVersion rekening nie"
+    no devices download copy:                   "Gebaseer op die aanlyn Bybel, YouVersion.com, is die Bybel App 'n gratis mobiele Bybel wat op bykans enige toestel geinstalleer kan word. Die Bybel App laat gebruikers toe om die Bybel te lees, verse te deel met sosiale netwerke, gunsteling gedeeltes te boekmerk en vele meer"
     yes delete:                                 "Ja, Sluit My Rekening"
     account delete success:                     "Jou YouVersion rekening is suksesvol gesluit. Ons hoop dat jy sal voortgaan om betekenisvolle maniere te vind om interaktief met die Bybel te verkeer. Van hierdie apps mag dalk handig te pas kom soos jy aanbeweeg:  <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description:                 "As jy jou rekening sluit, sal jy permanent van al jou informasie, geskiedenis, en verpersoonliking (soos notas, boekmerke, kleurmerke, ens.) binne YouVersion.com en die Bible App geillimineer word. Hierdie aksie kan nie deur jou of ons span omgekeer word nie. Indien jy seker is dat jy wil aangaan, gaan voort hieronder."
@@ -263,9 +265,9 @@ af:
       your information title:                   "Inligting wat jy verskaf"
       your information text:                    "Wanneer jy inteken op 'n YouVersion rekening, of 'n ander LifeChurch.tv diens of promosie wat registrasie vereis, vra ons jou vir persoonlike inligting (soos jou naam, e-pos adres en 'n rekening wagwoord). Ons mag die inligting wat jy verstrek op jou rekening, met inligting van ander LifeChurch.tv dienste of derde partye kombineer om aan jou 'n beter ervaring te laat beleef en die kwaliteit van ons diens te verbeter. Vir sekere dienste mag ons jou toelaat om uit te sit met die kombinering van sulke inligting."
       device id title:                          "Unieke Toestel ID"
-      device id text:                           "Wanneer jy toegang tot die YouVersion Bible Application verkry, mag ons dalk jou Unique Toestel ID (\"UTID\") en/of IP adres versamel. Ons gebruik jou UTID om jou 'n unieke ervaring te laat beleef. Die UTID inligting word versamel met die doel om die somtotaal van unieke toestelle wat van ons diens/gedeeltelike diens gebruik maak se volle gebruik te monitor, data te analiseer en meer effektief met jou te kan kommunikeer. Ons mag jou UTID kombineer met inligting van derde partye om jou van 'n beter ervaring te verseker en om die kwaliteit van ons diens te verbeter. Ons deel nie persoonlike identifiseerbare inligting met derde partye geassosierend met jou UTID nie."  
+      device id text:                           "Wanneer jy toegang tot die YouVersion Bible Application verkry, mag ons dalk jou Unique Toestel ID (\"UTID\") en/of IP adres versamel. Ons gebruik jou UTID om jou 'n unieke ervaring te laat beleef. Die UTID inligting word versamel met die doel om die somtotaal van unieke toestelle wat van ons diens/gedeeltelike diens gebruik maak se volle gebruik te monitor, data te analiseer en meer effektief met jou te kan kommunikeer. Ons mag jou UTID kombineer met inligting van derde partye om jou van 'n beter ervaring te verseker en om die kwaliteit van ons diens te verbeter. Ons deel nie persoonlike identifiseerbare inligting met derde partye geassosierend met jou UTID nie."
       cookies title:                            "LifeChurch.tv cookies"
-      cookies text:                             "Wanneer jy %{link} besoek, mag ons dalk een of meer cookies na jou rekenaar toe stuur sodat ons jou browser uniek kan identifiseer. ('n Cookie is eenvoudig 'n klein woord lêer wat 'n reeks letters bevat.) Met aanvaarding van ons cookies laat dit jou toe om jou gebruikersvoorkeure van sessie tot sessie te behou. Alhoewel die meeste browsers cookies automaties aanvaar, kan jy jou browser stel om alle cookies te weier, of om jou in te lig wanneer jy 'n cookie ontvang. Sekere YouVersion funksionaliteite mag dalk nie behoorlik werk as jy cookies deaktiveer nie."   
+      cookies text:                             "Wanneer jy %{link} besoek, mag ons dalk een of meer cookies na jou rekenaar toe stuur sodat ons jou browser uniek kan identifiseer. ('n Cookie is eenvoudig 'n klein woord lêer wat 'n reeks letters bevat.) Met aanvaarding van ons cookies laat dit jou toe om jou gebruikersvoorkeure van sessie tot sessie te behou. Alhoewel die meeste browsers cookies automaties aanvaar, kan jy jou browser stel om alle cookies te weier, of om jou in te lig wanneer jy 'n cookie ontvang. Sekere YouVersion funksionaliteite mag dalk nie behoorlik werk as jy cookies deaktiveer nie."
       log title:                                "Aanteken informasie"
       log text:                                 "As jy LifeChurch.tv dienste gebruik, stoor ons servers automaties  informasie wat jou browser stuur as dit een van ons webtuistes besoek. Hierdie server registers mag informasie bevat soos jou  web versoek, Internet Protokol adres, browser tipe, browser taal, die datum en tyd van jou versoek en een of meer 'cookies' wat jou browser uniek kan identifiseer."
       communications title:                     "Gebruikers kommunikasies"
@@ -434,6 +436,7 @@ af:
     you have no plans:                          "Jy is nie tans ingeskryf vir enige lees planne."
     no public plans:                            "Geen lees planne is sigbaar vir %{username}."
     filter by lang:                             "Vernou Planne tot Taal Keuse"
+    settings:                                   "Verstellings"
     search:                                     "Soek"
     search placeholder:                         "Soek %{category} Planne"
     subscribe to plan:                          "Begin Hierdie Plan"
