--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -10,8 +10,8 @@ de:
   about title:                                  "Über YouVersion"
   make a donation:                              "Gib eine Spende"
   thanks for your donation:                     "Vielen Dank für deine Spende!"
-  thanks authorization:                         "Danke für deine Spende! Dein Berechtigungs-Code ist %{code}."
-  donation error:                               "Sorry, leider hat mit deiner Spende etwas nicht geklappt. Versuch es bitte noch einmal."
+  thanks authorization:                         "Wenn du eine Bescheinigung für deine Spende erbeten hast, bekommst du in Kürze eine E-Mail dafür."
+  donation error:                               "Sorry, leider hat mit deiner Spende etwas nicht geklappt. Der Fehler war: %{error_text}"
   created ago:                                  "Erstellt vor %{time_ago}"
   copy:                                         "Kopieren"
   copy confirmed:                               "Kopiert!"
@@ -124,7 +124,7 @@ de:
   likes:
     my likes:                                   "Was mir gefällt"
     all likes:                                  "Alles, was mir gefällt"
-    none exist blurb:                           "Gefällt mir\" gibt es hier leider noch nicht"
+    none exist blurb:                           "Sorry, \"Gefällt mir\" gibt es hier leider noch nicht."
     likes:                                      "was mir gefällt"
     like button text:                           "gefällt mir"
     unlike button text:                         "gefällt mir nicht mehr"
@@ -134,7 +134,7 @@ de:
     public:                                     "Öffentlich"
     private:                                    "Privat"
     draft:                                      "Entwurf"
-    creation form errors:                       "Deine Notiz konnte aufgrund der folgenden Fehler nicht angelegt werden:"
+    creation form errors:                       "Persönliche Informationen oder Anfragen, die du über %{link} sendest, werden an den Gruppen-Administrator übermittelt. Dieser und/oder eines der Gruppenmitglieder haben Zugang zu dieser Information. Wenn du E-Mails sendest oder anders mit irgendeiner LifeChurch.tv Seite Kontakt aufnimmst, werden wir diese Kommunikation speichern, um deine Anfrage zu bearbeiten, zu beantworten und um unseren Service zu verbessern."
     status field:                               "Status:"
     reference field:                            "Bibelstelle(n):"
     version field:                              "Version:"
@@ -203,7 +203,7 @@ de:
     my recent_activity:                         "Meine letzte Aktivität"
     started following:                          "Du folgst nun:"
     subscribed to plan:                         "Benutzer, die den %{plan} - Plan abonnieren."
-    reading:                                    "Andere, die diesen Plan auch benutzen"    
+    reading:                                    "Andere, die diesen Plan auch benutzen"
     subscribed previously:                      "Angefangen vor %{time_ago}"
     sign in for settings:                       "Du musst dich anmelden, um in dein Profil zu kommen."
     my profile:                                 "Mein Profil"
@@ -218,9 +218,11 @@ de:
     edit devices:                               "Verbundene Geräte"
     edit account_existence:                     "Konto löschen"
     delete account button:                      "Mein YouVersion Konto löschen"
+    no devices:                                 "No devices connected to your YouVersion Account"
+    no devices download copy:                   "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> from your mobile device to download the Bible App and connect your account!"
     yes delete:                                 "Ja, mein Konto löschen"
-    account delete success:                     "Dein YouVersion Konto wurde erfolgreich gelöscht. Wir hoffen, dass du immer noch sinnvolle Wege findest die Bibel zu lesen. Einige dieser Apps könnten dafür hilfreich sein: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-    delete account description:                 "Wenn du dein Konto löschst werden alle deine Informationen, deine Geschichte und Personalisierungen (wie Notizen, Lesezeichen, Markierungen, etc.) innerhalb von YouVersion.com und der Bibel App gelöscht. Diese Aktion kann weder von dir noch von unserem Team rückgängig gemacht werden. Wenn du dir sicher bist, kannst du unten fortfahren."
+    account delete success:                     "Dein YouVersion-Konto wurde erfolgreich gelöscht. Wir hoffen, dass du andere Möglichkeiten nutzen wirst, um dich mit der Bibel zu beschäftigen. Die folgenden Apps beispielsweise könnten dazu hilfreich sein: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
+    delete account description:                 "Wenn du dein Konto löschst, werden alle deine Informationen, deine gesamte Historie sowie deine persönlichen Eintragungen (wie Notizen, Lesezeichen, Markierungen etc.) innerhalb von YouVersion.com und der Bibel App gelöscht. Diese Aktion kann weder von dir noch von unserem Team rückgängig gemacht werden. Wenn du dir sicher bist, kannst du unten fortfahren."
     user recent activity:                       "%{users}s jüngste Aktivität"
     my notes:                                   "My Notes"
     user notes:                                 "%{user}s Notizen"
@@ -263,13 +265,13 @@ de:
       your information title:                   "Informationen, die du gibst"
       your information text:                    "Wenn du dich bei YouVersion registrierst, oder bei einem anderen LifeChurch.tv Service oder Unterstützung, die Registrierung erfordern, fragen wir dich nach persönlichen Informationen (wie Name, Email-Adresse und ein Konto-Passwort). Wir können diese Informationen, die du mit deinem Konto übermittelst, mit Informationen anderer LifeChurch.tv Services oder Dritten zusammenführen, um dir eine bessere Erfahrung zu ermöglichen oder die Qualität unserer Services zu verbessern. Für bestimmte Services können wir dich entscheiden lassen, ob du diese Zusammenführung der Informationen zulassen willst."
       device id title:                          "Eindeutige Geräte ID"
-      device id text:                           "Wenn du auf die YouVersion Bible App zugreifst, können wir deine eindeutige Geräte ID (*IMEI*) und/oder die IP Adresse ermitteln. Wir nutzen deine IMEI, um einen maßgeschneiderten Ablauf für dich zu erzeugen. Die IMEI-Daten werden erfasst, um die Gesamtzahl von Einzelgeräten zu bestimmen, die unseren Service oder Teile unseres Services nutzen, um die gesamte Nutzung nachzuverfolgen, Daten zu analysieren und effektiver mit dir zu kommunizieren. Wir können deine IMEI mit Daten von Dritten zusammenführen, damit du persönlich mehr Nutzen von VY hast und damit wir die Qualität unseres Services verbessern können. Wir geben keine Daten an Dritte weiter, die dich persönlich mit deiner IMEI in Verbindung bringen."  
+      device id text:                           "Wenn du auf die YouVersion Bible App zugreifst, können wir deine eindeutige Geräte ID (*IMEI*) und/oder die IP Adresse ermitteln. Wir nutzen deine IMEI, um einen maßgeschneiderten Ablauf für dich zu erzeugen. Die IMEI-Daten werden erfasst, um die Gesamtzahl von Einzelgeräten zu bestimmen, die unseren Service oder Teile unseres Services nutzen, um die gesamte Nutzung nachzuverfolgen, Daten zu analysieren und effektiver mit dir zu kommunizieren. Wir können deine IMEI mit Daten von Dritten zusammenführen, damit du persönlich mehr Nutzen von VY hast und damit wir die Qualität unseres Services verbessern können. Wir geben keine Daten an Dritte weiter, die dich persönlich mit deiner IMEI in Verbindung bringen."
       cookies title:                            "LifeChurch.tv Cookies"
-      cookies text:                             "Wenn du %{link} besuchst, können wir ein oder mehrere Cookies an deinen Computer senden, damit wir deinen Browser eindeutig identifizieren können. (Ein Cookie ist einfach eine kleine Text-Datei, die eine Zeichenfolge enthält.) Durch das Akzeptieren unserer Cookies ist es dir möglich, deine Nutzereinstellung von Sitzung zu Sitzung beizubehalten. Obwohl die meisten Browser Cookies standardmäßig zulassen, kannst du deinen Browser so einstellen, dass er alle Cookies ablehnt oder dich informiert, wenn ein Cookie gesendet wird. Manche YouVersion-Funktionen funktionieren möglicherweise nicht richtig, wenn Cookies deaktiviert sind."   
+      cookies text:                             "Wenn du %{link} besuchst, können wir ein oder mehrere Cookies an deinen Computer senden, damit wir deinen Browser eindeutig identifizieren können. (Ein Cookie ist einfach eine kleine Text-Datei, die eine Zeichenfolge enthält.) Durch das Akzeptieren unserer Cookies ist es dir möglich, deine Nutzereinstellung von Sitzung zu Sitzung beizubehalten. Obwohl die meisten Browser Cookies standardmäßig zulassen, kannst du deinen Browser so einstellen, dass er alle Cookies ablehnt oder dich informiert, wenn ein Cookie gesendet wird. Manche YouVersion-Funktionen funktionieren möglicherweise nicht richtig, wenn Cookies deaktiviert sind."
       log title:                                "Log-Informationen"
       log text:                                 "Wenn du LifeChurch.tv Dienste nutzt, protokollieren unsere Server automatisch die Informationen, die dein Browser sendet, wenn du eine unserer Websites besuchst. Diese Server-Protokolle können Informationen wie z.B. deine Internet-Anfrage, deine IP-Adresse, deinen Browser-Typ, die Browser-Sprache, Datum und Zeit deiner Anfrage sowie ein oder mehrere Cookies enthalten, die deinen Browser eindeutig identifizieren."
       communications title:                     "Benutzer-Kommunikation"
-      communications text:                      "Persönliche Informationen oder Anfragen, die du über %{link} sendest, werden an den Gruppen-Administrator übermittelt. Dieser und/oder eines der Gruppenmitglieder haben Zugang zu dieser Information. Wenn du Emails sendest oder anders mit irgendeiner LifeChurch.tv Seite Kontakt aufnimmst, werden wir diese Kommunikation speichern, um deine Anfrage zu bearbeiten, zu beantworten und um unseren Service zu verbessern."
+      communications text:                      "Persönliche Informationen oder Anfragen, die du über %{link} sendest, werden an den Gruppen-Administrator übermittelt. Dieser und/oder eines der Gruppenmitglieder haben Zugang zu dieser Information. Wenn du E-Mails sendest oder anders mit irgendeiner LifeChurch.tv Seite Kontakt aufnimmst, werden wir diese Kommunikation speichern, um deine Anfrage zu bearbeiten, zu beantworten und um unseren Service zu verbessern."
       third party title:                        "Websites Dritter"
       third party text:                         "Diese Datenschutz-Vereinbarung gilt nur für Seiten und Apps im Besitz und betrieben von LifeChurch.tv. LifeChurch.tv kann andere Seiten, die auf unseren verschiedenen Websites und Diensten verlinkt sind, nicht steuern. Diese Seiten können eigene Cookies oder Dateien auf deinem Computer platzieren, Daten sammeln oder persönliche Informationen von dir erbitten. Du solltest dich selbst mit deren eigenen Datenschutz-Vereinbarungen vertraut machen, solltest du deren Seiten besuchen."
       information use title:                    "Wie nutzen wir deine Informationen?"
@@ -425,7 +427,7 @@ de:
     about this plan:                            "Über diesen Leseplan"
     about the publisher:                        "Über den Autor"
     day:                                        "Tag"
-    month:                                      "Monat"
+    month:                                      "Kalender"
     publisher:                                  "Autor"
     success widget title:                       "Hole das Beste aus deinem Leseplan heraus."
     success blurb:                              "Lesepläne sind der beste Weg, Gottes Wort zu einem Teil deines täglichen Lebens zu machen. Aber fast jeder hinkt manchmal hinterher. Zu hören, was Gott uns jeden Tag zu sagen hat, ist wichtig. Deshalb haben wir einige Tipps zusammengestellt, um dir zu helfen, beim Lesen am Ball zu bleiben."
@@ -434,6 +436,7 @@ de:
     you have no plans:                          "Im Moment hast du keinen Leseplan abonniert."
     no public plans:                            "Von %{username} ist kein Leseplan sichtbar."
     filter by lang:                             "Lesepläne nach Sprachen filtern"
+    settings:                                   "Einstellungen"
     search:                                     "Suche"
     search placeholder:                         "Suche %{category}-Lesepläne"
     subscribe to plan:                          "Diesen Leseplan beginnen"
@@ -521,7 +524,7 @@ de:
     suggestion html:                            "Meintest du %{suggestion_link}?"
     all versions:                               "Alle %{language_name}en Versionen"
   donate:
-    donate now:                                 "Jetzt spenden"
+    donate now:                                 "Jetzt spenden (USA)"
     donate now intl:                            "oder von außerhalb der USA spenden"
     promo 1:                                    "Für jeden Euro den du spendest, können noch 10 Leute mehr mit ihrem Handy auf die Bibel zugreifen."
     promo 2:                                    "Mit YouVersion ist die Bibel immer in der Nähe. Schau unser Video an."
@@ -545,9 +548,9 @@ de:
     state:                                      "Bundesland"
     zip:                                        "PLZ"
   download ad:
-    title:                                      "Lade dir die gratis Bibel App herunter"
-    line 1:                                     "Hunderte Versionen in vielen"
-    line 2:                                     "verschiedenen Sprachen—die Bibel, die"
+    title:                                      "Lade dir die Bibel App gratis herunter."
+    line 1:                                     "Hunderte Versionen in über 100"
+    line 2:                                     "verschiedenen Sprachen - die Bibel, die"
     line 3:                                     "du überall hin mitnehmen kannst."
     download:                                   "Jetzt herunterladen"
   about page:
@@ -557,7 +560,7 @@ de:
     information revolution copy:                "Im Laufe des letzten Jahrzehnts hat das Internet geradezu eine Revolution gebracht, die Menschen wie nie zuvor befähigt. Mit der Möglichkeit sich auszutauschen, etwas beizutragen, zu erschaffen, zu verbreiten und zu kommunizieren ist es einfach dem Rest der Welt mitzuteilen, wer wir sind und was wir glauben."
     youversion copy:                            "Seit seinem Start 1996 war es das Ziel von LifeChurch.tv, Menschen zu einer hingebungsvollen Nachfolge Christi zu führen. Unter diesem Aspekt haben wir nach neuen Wegen Ausschau gehalten, Menschen zu helfen die Bibel in ihr tägliches Leben einzubinden. Unsere Methoden haben sich im Laufe der Jahre verändert, weil wir verschiedene Technologien und Strategien einbezogen haben. Aber im Kern bleibt unser Fokus darauf, dass wir fortgesetzt danach streben, den Menschen zu zeigen, wie Gottes Wort für jeden Bedeutung hat, egal wo er sich in seinem Leben befindet."
     youversion copy 2:                          "YouVersion ist ein neuer Schritt bei den Anstrengungen von LifeChurch.tv. Indem wir neue Technologie benutzen, haben wir kein Werkzeug geschaffen, um die Welt zu beeinflussen, vielmehr laden wir Menschen zu einer Beziehung zu Gott ein, indem sie die Bedeutung der Bibel für ihr Leben erkennen."
-    partners title:                             "Ein besonderes Dankeschön an unsere Partner"
+    partners title:                             "Unsere Partner, die Bibeln veröffentlichen"
     partners text:                              "Ohne unsere großzügigen Partner bei den Herausgebern der Bibeln könnte YouVersion der weltweiten Gemeinschaft nicht so viele Bibeln zur Verfügung stellen. Viele von euch haben gefragt, wie ihr denen, die die Mission von YouVersion derart unterstützen, helfen könnt. Ihr könnt mehr über sie und ihren Dienst erfahren und sie jederzeit über die unten genannten Links unterstützen. "
     translation title:                          "Unsere Übersetzerteams"
     learn more:                                 "Mehr erfahren"
@@ -596,14 +599,14 @@ de:
   mobile page:
     h2:                                         "Gottes Wort begleitet dich."
     h3:                                         "YouVersion ist global."
-    h3 sub:                                     "In hunderten Sprachen weltweit verfügbar."
-    main:                                       "Zig Millionen Menschen nutzen die Bible App™ um Gottes Wort zu einem Teil ihres täglichen Lebens zu machen. Lade die kostenlose App herunter und erhalte von überall Zugang zu deinen Lesezeichen, Notizen und Leseplänen. Genieße hunderte Bibelversionen, einschließlich Hörbibeln auf deinem mobilen Gerät."
+    h3 sub:                                     "In über 100 Sprachen weltweit verfügbar."
+    main:                                       "Zig Millionen Menschen nutzen die Bible App™, um Gottes Wort zu einem Teil ihres täglichen Lebens zu machen. Lade die kostenlose App herunter und greife von überall aus auf deine Lesezeichen, Notizen und Leseplänen zu. Genieße hunderte Bibelversionen, einschließlich Hörbibeln auf deinem mobilen Gerät."
     button h4:                                  "Gehe zu youversion.com/download"
     button h4 sub:                              "Auf deinem mobilen Gerät"
     download now:                               "Lade die Bibel App jetzt herunter."
     what people:                                "Was die Leute über die kostenlose Bibel App sagen..."
     t1:                                         "Ich habe Gottes Wort immer dabei."
-    t1 copy:                                    "Ich habe Passagen, die für mich wichtig sind, Lesezeichen angelegt. Ich habe die ganze Bibel dank der Lesepläne in einem Jahr durchgelesen."
+    t1 copy:                                    "Ich habe für Passagen, die für mich wichtig sind, Lesezeichen angelegt. So habe ich die ganze Bibel dank der Lesepläne in einem Jahr durchgelesen."
     t2:                                         "Tolles Programm!"
     t2 copy:                                    "Diese App hilft mir dabei, organisiert zu bleiben und Gottes Wort jeden Tag zu lesen. Sie ist einfach zu bedienen und bietet viele Funktionen ... Ich liebe sie!"
     t3:                                         "Wunderbare App."
