--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -218,6 +218,8 @@
     edit devices:                               "Tilknyttede enheter"
     edit account_existence:                     "Slett brukerkonto"
     delete account button:                      "Slett min YouVersion-konto"
+    no devices:                                 "No devices connected to your YouVersion Account"
+    no devices download copy:                   "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> from your mobile device to download the Bible App and connect your account!"
     yes delete:                                 "Ja, slett min brukerkonto"
     account delete success:                     "Din YouVersion-konto har blitt slettet. Vi håper du fortsatt vil finne meningsfulle måter å benytte Bibelen på. Noen av disse appene kan være nyttige for deg videre: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description:                 "Hvis du sletter kontoen din vil du fjerne for godt all din informasjon, historikk og tilpasninger (som notater, bokmerker, markert tekst osv) både på YouVersion.com og i Bibel-appen. Dette kan ikke gjenopprettes av deg eller vårt team. Hvis du er sikker på at du ønsker å gå videre, fortsett nedenfor."
@@ -434,6 +436,7 @@
     you have no plans:                          "Du abonnerer ikke på noen leseplaner nå."
     no public plans:                            "Ingen leseplaner er synlige for %{username}."
     filter by lang:                             "Filtrer planer etter språk"
+    settings:                                   "Innstillinger"
     search:                                     "Søk"
     search placeholder:                         "Søk planer for %{category}"
     subscribe to plan:                          "Start denne planen"
