--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -203,7 +203,7 @@ ro:
     my recent_activity:                         "Activitatea mea recentă"
     started following:                          "Am început să simpatizez"
     subscribed to plan:                         "Utilizatori abonați la %{plan}"
-    reading:                                    "Utilizatori care citesc acest plan"    
+    reading:                                    "Utilizatori care citesc acest plan"
     subscribed previously:                      "Început cu %{time_ago} în urmă"
     sign in for settings:                       "Trebuie să fii autentificat pentru a-ți accesa profilul."
     my profile:                                 "Profilul meu"
@@ -218,6 +218,8 @@ ro:
     edit devices:                               "Dispozitive conectate"
     edit account_existence:                     "Ștergere cont"
     delete account button:                      "Șterge contul meu YouVersion"
+    no devices:                                 "Nu există nici un dispozitiv conectat cu contul tău YouVersion "
+    no devices download copy:                   "Bazată pe Biblia online, YouVersion.com, aplicația Biblia este o Biblie mobilă gratuită care poate fi instalată aproape pe orice dispozitiv mobil. Aplicația Biblia permite utilizatorilor să citească Biblia, să partajeze versete cu rețelele lor sociale, să își salveze pasajele favorite și multe altele&mdash;toate într-un format care este mereu la zi cu stilul de viață mobil. Intră pe <a href='http://www.youversion.com/download'>youversion.com/download</a> de pe dispozitivul tău mobil pentru a descărca Aplicația Biblia și a te conecta."
     yes delete:                                 "Da, șterge contul meu"
     account delete success:                     "Contul tău YouVersion a fost șters cu succes. Sperăm să găsești și în continuare moduri semnificative de a interacționa cu Biblia. Poate aceste aplicații te vor ajuta să avansezi: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description:                 "Dacă îți ștergi contul, vei înlătura permanent toate datele tale, istoricul și personalizările (precum notițe, marcaje, evidențieri, etc.) din cadrul YouVersion.com și al Aplicației Biblia. Această acțiune nu poate fi revocată de tine sau de echipa noastră. Dacă ești sigur că vrei să continui, urmează procedura de mai jos."
@@ -263,9 +265,9 @@ ro:
       your information title:                   "Informația pe care o pui la dispoziție"
       your information text:                    "Când te înregistrezi pentru un cont YouVersion sau alt serviciu sau promoție LifeChurch.tv care necesită înregistrare, îți solicităm informații personale (precum nume, adresă de e-mail și parola de accesare a contului). Este posibil să combinăm informațiile asociate contului tău cu informațiile existente pe alte servicii LifeChurch.tv sau terțe părți cu scopul de a-ți oferi o experiență cât mai plăcută și pentru a îmbunătăți calitatea serviciilor noastre. Pentru anumite servicii, poți opta să nu participi cu informațiile personale."
       device id title:                          "ID-ul unic al dispozitivului."
-      device id text:                           "Când accesezi Aplicația Biblia de la YouVersion, este posibil să colectăm identificatorul unic al dispozitivului tău („UDID”) și/sau adresa ta IP. Folosim UDID-ul tău pentru a-ți putea oferi o experiență adaptată nevoilor tale. Informația UUID este colectată pentru a determina numărul total de dispozitive unice care folosesc serviciul nostru sau o parte din acesta, pentru a monitoriza utilizarea per total, pentru a analiza date și pentru a comunica cât mai eficient cu tine. Putem să combinăm UDID-ul tău cu informații de la terțe părți pentru a-ți oferi o experiență cât mai plăcută și pentru a îmbunătăți calitatea serviciilor noastre. Nu partajăm cu terțe părți nici o informație de identificare personală asociată UDID-ului tău."  
+      device id text:                           "Când accesezi Aplicația Biblia de la YouVersion, este posibil să colectăm identificatorul unic al dispozitivului tău („UDID”) și/sau adresa ta IP. Folosim UDID-ul tău pentru a-ți putea oferi o experiență adaptată nevoilor tale. Informația UUID este colectată pentru a determina numărul total de dispozitive unice care folosesc serviciul nostru sau o parte din acesta, pentru a monitoriza utilizarea per total, pentru a analiza date și pentru a comunica cât mai eficient cu tine. Putem să combinăm UDID-ul tău cu informații de la terțe părți pentru a-ți oferi o experiență cât mai plăcută și pentru a îmbunătăți calitatea serviciilor noastre. Nu partajăm cu terțe părți nici o informație de identificare personală asociată UDID-ului tău."
       cookies title:                            "Cookie-uri LifeChurch.tv"
-      cookies text:                             "Când vizitezi %{link}, putem trimite unul sau mai multe cookie-uri către calculatorul tău pentru a identifica în mod unic navigatorul tău de internet. (Un cookie este un fișier text de dimensiuni foarte mici care conține o înșiruire de caractere). Acceptând cookie-urile noastre îți poți păstra preferințele de utilizator de la o sesiune la alta. Deși majoritatea acceptă implicit cookie-uri, îți poți seta navigatorul de internet să refuze toate cookie-urile sau să te avertizeze când acestea îți sunt trimise. S-ar putea ca unele caracteristici și servicii YouVersion să nu funcționeze corect dacă ai cookie-urile dezactivate."   
+      cookies text:                             "Când vizitezi %{link}, putem trimite unul sau mai multe cookie-uri către calculatorul tău pentru a identifica în mod unic navigatorul tău de internet. (Un cookie este un fișier text de dimensiuni foarte mici care conține o înșiruire de caractere). Acceptând cookie-urile noastre îți poți păstra preferințele de utilizator de la o sesiune la alta. Deși majoritatea acceptă implicit cookie-uri, îți poți seta navigatorul de internet să refuze toate cookie-urile sau să te avertizeze când acestea îți sunt trimise. S-ar putea ca unele caracteristici și servicii YouVersion să nu funcționeze corect dacă ai cookie-urile dezactivate."
       log title:                                "Informații de jurnalizare"
       log text:                                 "Când folosești serviciile LifeChurch.tv, serverele noastre înregistrează automat informațiile trimise de navigatorul tău de internet atunci când vizitezi paginile noastre web. Aceste înregistrări pot include informații precum solicitarea ta de web, adresa IP, tipul de navigator de internet, limba navigatorului de internet, data și ora solicitării tale și unul sau mai multe cookie-uri care pot identifica în mod unic navigatorul tău de internet."
       communications title:                     "Înștiințările utilizatorului"
@@ -434,6 +436,7 @@ ro:
     you have no plans:                          "Momentan nu ești abonat la niciun plan de citire."
     no public plans:                            "Nu există niciun plan de citire vizibil pentru %{username}."
     filter by lang:                             "Filtrează planurile după limbă"
+    settings:                                   "Setări"
     search:                                     "Caută"
     search placeholder:                         "Caută planurile din %{category}"
     subscribe to plan:                          "Începe acest plan"
@@ -571,7 +574,7 @@ ro:
     facebook:                                   "YouVersion pe Facebook"
     twitter:                                    "YouVersion pe Twitter"
     support:                                    "Ai nevoie de ajutor cu YouVersion?"
-    lead copy:                                  "Bazată pe Biblia online, YouVersion.com, aplicația Biblia este o Biblie mobilă gratuită care poate fi instalată aproape pe orice telefon. Aplicația Biblia permite utilizatorilor să citească Biblia, să împărtășească versete cu rețelele lor sociale, să își salveze pasajele favorite și multe altele&mdash;toate într-un format care este mereu la zi cu stilul de viață mobil."
+    lead copy:                                  "Bazată pe Biblia online, YouVersion.com, aplicația Biblia este o Biblie mobilă gratuită care poate fi instalată aproape pe orice telefon. Aplicația Biblia permite utilizatorilor să citească Biblia, să partajeze versete cu rețelele lor sociale, să își salveze pasajele favorite și multe altele&mdash;toate într-un format care este mereu la zi cu stilul de viață mobil."
     resources title:                            "Resurse pentru presă"
     now title:                                  "Azi, în comunitatea YouVersion"
     resources:
