--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -10,8 +10,8 @@ sk:
   about title:                                  "O YouVersion"
   make a donation:                              "Prispejte"
   thanks for your donation:                     "Ďakujeme za váš príspevok!"
-  thanks authorization:                         "Ďakujeme za váš dar! Váš autorizačný kód je %{code}."
-  donation error:                               "Prepáčte, ale zaslanie vášho príspevku zlyhalo. Prosím, skúste znova."
+  thanks authorization:                         "Ak ste požiadali o potvrdenie, bude vám čoskoro doručené emailom."
+  donation error:                               "Prepáčte, ale zaslanie vášho príspevku zlyhalo. Chyba: %{error_text}"
   created ago:                                  "Vytvorené pred %{time_ago}"
   copy:                                         "Kopírovať"
   copy confirmed:                               "Skopírované!"
@@ -203,7 +203,7 @@ sk:
     my recent_activity:                         "Moja nedávna aktivita"
     started following:                          "Nasledovanie používateľa"
     subscribed to plan:                         "Používatelia, ktorí čítajú %{plan}"
-    reading:                                    "Používatelia, ktorí čítajú tento plán"    
+    reading:                                    "Používatelia, ktorí čítajú tento plán"
     subscribed previously:                      "Pred %{time_ago}"
     sign in for settings:                       "Pre prístup k vášmu profilu sa prosím prihláste."
     my profile:                                 "Môj profil"
@@ -218,6 +218,8 @@ sk:
     edit devices:                               "Prepojené zariadenia"
     edit account_existence:                     "Zmazať účet"
     delete account button:                      "Zmazať môj YouVersion účet"
+    no devices:                                 "No devices connected to your YouVersion Account"
+    no devices download copy:                   "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> from your mobile device to download the Bible App and connect your account!"
     yes delete:                                 "Áno, zmazať môj účet"
     account delete success:                     "Váš YouVersion účet bol úspešne zmazaný. Dúfame, že si aj naďalej nájdete spôsob, ako čerpať z Biblie. Môžu vám k tomu napomôcť niektoré z týchto aplikácií: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description:                 "Ak zmažete váš účet, tak navždy stratíte všetky vaše údaje (poznámky, históriu, záložky, zvýraznenia atď.) na YouVersion.com a v aplikácii Biblia. Táto akcia sa nedá vrátiť späť. Ak ste si istý, že chcete pokračovať, urobte tak nižšie."
@@ -263,9 +265,9 @@ sk:
       your information title:                   "do not translate"
       your information text:                    "do not translate"
       device id title:                          "do not translate"
-      device id text:                           "do not translate"  
+      device id text:                           "do not translate"
       cookies title:                            "do not translate"
-      cookies text:                             "do not translate"   
+      cookies text:                             "do not translate"
       log title:                                "do not translate"
       log text:                                 "do not translate"
       communications title:                     "do not translate"
@@ -425,7 +427,7 @@ sk:
     about this plan:                            "O tomto pláne"
     about the publisher:                        "O tomto vydavateľovi"
     day:                                        "Deň"
-    month:                                      "Mesiac"
+    month:                                      "Kalendár"
     publisher:                                  "Vydavateľ"
     success widget title:                       "Vyťažte z plánu čítania maximum"
     success blurb:                              "Plány čítania sú najlepším spôsobom, ako spraviť Božie Slovo súčasťou vášho každodenného života. Ale takmer každému sa niekedy podarí zaostať za plánom. Je dôležité počuť, čo nám Boh každý deň chce povedať. Preto sme pripravili niekoľko rád, ako nezaostať a docieliť pravidelné čítanie."
@@ -434,6 +436,7 @@ sk:
     you have no plans:                          "Momentálne nemáte žiadne plány čítania."
     no public plans:                            "Pre používateľa %{username} nie sú viditeľné žiadne plány čítania."
     filter by lang:                             "Filtrovať plány podľa jazyka"
+    settings:                                   "Nastavenia"
     search:                                     "Hľadať"
     search placeholder:                         "Hľadať plány z kategórie %{category}"
     subscribe to plan:                          "Začať tento plán"
@@ -546,9 +549,9 @@ sk:
     zip:                                        "PSČ"
   download ad:
     title:                                      "Stiahnite si bezplatnú aplikáciu Biblia"
-    line 1:                                     "Stovky prekladov v rôznych"
-    line 2:                                     "jazykoch — Biblia, ktorá"
-    line 3:                                     "ide všade s vami."
+    line 1:                                     "Stovky prekladov vo viac"
+    line 2:                                     "ako 100 jazykoch — Biblia,"
+    line 3:                                     "ktorá ide všade s vami."
     download:                                   "Stiahnuť teraz"
   about page:
     relevancy:                                  "Význam"
@@ -557,7 +560,7 @@ sk:
     information revolution copy:                "Za posledných 10 rokov spôsobil internet revolúciu, ktorá dáva ľuďom možnosti, aké nikdy pred tým neexistovali. Vďaka možnosti zdieľať, prispievať, vytvárať, vysielať a komunikovať je jednoduché celému svetu odkázať kto sme a v čo veríme."
     youversion copy:                            "Od svojho vzniku v roku 1996 bolo cieľom LifeChurch.tv viesť ľudí k tomu, aby sa stali oddanými nasledovníkmi Krista. Počas toho sme hľadali nové spôsoby, ako pomôcť ľuďom vniesť Bibliu do ich každodenného života. Naše metódy sa v priebehu rokov menili. Postupne sme skúšali rôzne stratégie a technológie, ale v hĺbke zostalo naše zameranie stále na význame Božieho Slova, ktorý sa ľuďom snažíme ukázať a naučiť ich, že sa týka každého, bez rozdielu kde sa v svojom živote nachádzajú."
     youversion copy 2:                          "YouVersion predstavuje novú oblasť v snahách LifeChurch.tv. Nevytvárame nástroj, vďaka ktorému by sme chceli použitím inovatívnych technológií získať vplyv. Predovšetkým sme ľudia zapálení pre vzťah s Bohom, ktorí objavujú dôležitosť Biblie na životy nás všetkých."
-    partners title:                             "Špeciálne poďakovanie našim partnerom"
+    partners title:                             "Partnerskí vydavatelia Biblie"
     partners text:                              "Bez našich štedrých partnerov z oblasti publikovania Biblie by YouVersion nedokázalo poskytnúť našej celosvetovej komunite také množstvo prekladov Biblie. Mnohí ste sa nás pýtali, ako môžete poďakovať tým, ktorí tak intenzívne podporujú misiu YouVersion. Viac o nich, o ich službách a spôsoboch, ako ich môžete podporiť nájdete na nižšie uvedených odkazoch."
     translation title:                          "Naše tímy prekladateľov"
     learn more:                                 "Zistiť viac"
@@ -596,7 +599,7 @@ sk:
   mobile page:
     h2:                                         "Božie Slovo je s vami."
     h3:                                         "YouVersion je globálne"
-    h3 sub:                                     "Dostupné v stovkách jazykov po celom svete."
+    h3 sub:                                     "Dostupné vo viac ako sto jazykoch po celom svete."
     main:                                       "Desiatky miliónov ľudí používajú aplikáciu Biblia s úmyslom, aby sa Božie Slovo stalo súčasťou ich každodenného života. Stiahnite si túto bezplatnú aplikáciu a získajte prístup k vašim záložkám a plánom čítania odvšadiaľ. Využite stovky prekladov vrátane audio nahrávok priamo na vašom mobilnom zariadení."
     button h4:                                  "Otvorte si youversion.com/download"
     button h4 sub:                              "Na vašom mobilnom zariadení"
