--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -203,7 +203,7 @@ bg:
     my recent_activity:                         "Моите последни действия"
     started following:                          "Следва"
     subscribed to plan:                         "Потребителят е записан за %{plan}"
-    reading:                                    "Потребители използващи този план"    
+    reading:                                    "Потребители използващи този план"
     subscribed previously:                      "Започнат преди %{time_ago}"
     sign in for settings:                       "Влез в профила си"
     my profile:                                 "Моят профил"
@@ -218,6 +218,8 @@ bg:
     edit devices:                               "Свързани устройства"
     edit account_existence:                     "Изтрий профила"
     delete account button:                      "Изтрий профила ми с YouVersion "
+    no devices:                                 "No devices connected to your YouVersion Account"
+    no devices download copy:                   "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> from your mobile device to download the Bible App and connect your account!"
     yes delete:                                 "Да, изтрий профила ми"
     account delete success:                     "Твоят профил с YouVersion е изтрит. Надяваме се да продължиш да използваш Библията чрез следните приложения: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description:                 "Ако изтриете профила си, губите всичката си информация, история и персонализиране (като бележки, отбелязвания, маркиране и т.н.) в YouVersion.com и Библията. Това действие е небратимо. Продължете само ако сте сигурни, че искате да направите това."
@@ -263,9 +265,9 @@ bg:
       your information title:                   "Споделена информация"
       your information text:                    "When you sign up for a YouVersion account, or another LifeChurch.tv service or promotion that requires registration, we ask you for personal information (such as your name, email address and an account password). We may combine the information you submit under your account, with information from other LifeChurch.tv services or third parties to provide you with a better experience and to improve the quality of our services. For certain services, we may allow you to opt out of combining such information."
       device id title:                          "Идентификация на устройството"
-      device id text:                           "When you access the YouVersion Bible Application, we may collect your Unique Device ID ('UDID') and/or IP address. We use your UDID to provide a tailored experience for you. The UDID information is collected in order to determine the aggregate number of unique devices using our service or parts of our service, to track total usage, analyze data, and communicate with you more effectively. We may combine your UDID with information from third parties to provide you with a better experience and to improve the quality of our service. We do not share any personally identifiable information with third parties in association with your UDID."  
+      device id text:                           "When you access the YouVersion Bible Application, we may collect your Unique Device ID ('UDID') and/or IP address. We use your UDID to provide a tailored experience for you. The UDID information is collected in order to determine the aggregate number of unique devices using our service or parts of our service, to track total usage, analyze data, and communicate with you more effectively. We may combine your UDID with information from third parties to provide you with a better experience and to improve the quality of our service. We do not share any personally identifiable information with third parties in association with your UDID."
       cookies title:                            "LifeChurch.tv бисквитки за браузера."
-      cookies text:                             "When you visit %{link}, we may send one or more cookies to your computer, so that we may uniquely identify your browser. (A cookie is simply a tiny text file containing a string of characters.) Accepting our cookies allows you to keep your user preferences from session to session. Although most browsers accept cookies by default, you can set your browser to refuse all cookies, or to tell you when you're being sent a cookie. Some YouVersion features and services may not function properly if you have cookies disabled."   
+      cookies text:                             "When you visit %{link}, we may send one or more cookies to your computer, so that we may uniquely identify your browser. (A cookie is simply a tiny text file containing a string of characters.) Accepting our cookies allows you to keep your user preferences from session to session. Although most browsers accept cookies by default, you can set your browser to refuse all cookies, or to tell you when you're being sent a cookie. Some YouVersion features and services may not function properly if you have cookies disabled."
       log title:                                "Информация от лог файла"
       log text:                                 "When you use LifeChurch.tv services, our servers automatically record information that your browser sends when you visit one of our websites. These server logs may include information such as your web request, Internet Protocol address, browser type, browser language, the date and time of your request, and one or more cookies that may uniquely identify your browser."
       communications title:                     "Разговори"
@@ -434,6 +436,7 @@ bg:
     you have no plans:                          "Не сте записани в план за четене"
     no public plans:                            "Няма избран план за четене за %{username}."
     filter by lang:                             "Филтрирай плановете по език"
+    settings:                                   "Настройки"
     search:                                     "Търси"
     search placeholder:                         "Търси планове в %{category}"
     subscribe to plan:                          "Започни този план"
