--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -203,7 +203,7 @@ ru:
     my recent_activity:                         "Последние действия"
     started following:                          "Добавили в друзья:"
     subscribed to plan:                         "Пользователи, подписанные на %{plan}"
-    reading:                                    "Пользователи, читающие по этому плану"    
+    reading:                                    "Пользователи, читающие по этому плану"
     subscribed previously:                      "Начат %{time_ago} назад"
     sign in for settings:                       "Вы должны войти, чтобы получить доступ к профилю."
     my profile:                                 "Мой профиль"
@@ -218,6 +218,8 @@ ru:
     edit devices:                               "Подключенные устройства"
     edit account_existence:                     "Удалить аккаунт"
     delete account button:                      "Удалить мой аккаунт YouVersion"
+    no devices:                                 "No devices connected to your YouVersion Account"
+    no devices download copy:                   "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> from your mobile device to download the Bible App and connect your account!"
     yes delete:                                 "Да, удалить"
     account delete success:                     "Ваш аккаунт YouVersion был успешно удалён. Мы надеемся, что вы продолжите искать пути взаимодействия с Библией. Некоторые из этих приложений могут быть полезны в вашем продвижении: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description:                 "Если вы удалите аккаунт, то полностью уничтожите всю информацию о себе, историю использования YouVersion и персональные данные (заметки, закладки, выделение цветом и т.д.) на YouVersion.com и в приложении Библия. Это действие не может быть отменено вами или сотрудниками нашей команды. Если вы уверены, что хотите продолжить, введите пароль и нажмите кнопку ниже."
@@ -263,9 +265,9 @@ ru:
       your information title:                   "Информация, которую Вы предоставляете"
       your information text:                    "Когда Вы создаете учетную запись на YouVersion или подписываетесь на любую другую услугу или предложение LifeChurch.tv, требующее регистрации, мы запрашиваем у Вас некоторые личные данные (как то: Ваше имя и фамилия, адрес эл. почты и пароль учетной записи). Мы имеем право объединить информацию, которую Вы предоставляете в рамках Вашей учетной записи, с информацией, полученной другими сервисами LifeChurch.tv или третьими лицами, с целью повышения разнообразия и качества предоставляемых Вам услуг. В некоторых сервисах мы можем предоставить Вам возможность отказаться от объединения такой информации."
       device id title:                          "Уникальный идентификатор устройства"
-      device id text:                           "При использовании Вами приложения Библия от YouVersion, мы можем сохранять Ваш Уникальный идентификатор устройства (“UDID”) и (или) IP-адрес. Мы используем Ваш UDID с целью предоставления Вам индивидуализированных возможностей использования приложения. Сбор информации о UDID осуществляется с целью определения общего числа уникальных устройств, которые используют нашу услугу или ее часть, отслеживания общего использования, анализа данных и более эффективной коммуникации с пользователями. Мы можем объединять Ваш UDID с информацией, полученной от третьих лиц, с целью предоставления Вам более интересных и качественных услуг. Мы не передаем связанную с Вашим UDID личную информацию, которая может Вас идентифицировать, третьим лицам."  
+      device id text:                           "При использовании Вами приложения Библия от YouVersion, мы можем сохранять Ваш Уникальный идентификатор устройства (“UDID”) и (или) IP-адрес. Мы используем Ваш UDID с целью предоставления Вам индивидуализированных возможностей использования приложения. Сбор информации о UDID осуществляется с целью определения общего числа уникальных устройств, которые используют нашу услугу или ее часть, отслеживания общего использования, анализа данных и более эффективной коммуникации с пользователями. Мы можем объединять Ваш UDID с информацией, полученной от третьих лиц, с целью предоставления Вам более интересных и качественных услуг. Мы не передаем связанную с Вашим UDID личную информацию, которая может Вас идентифицировать, третьим лицам."
       cookies title:                            "Cookie-файлы LifeChurch.tv"
-      cookies text:                             "При посещении Вами %{link}, мы можем отправить один или несколько cookie-файлов на Ваш компьютер, чтобы иметь возможность идентифицировать Ваш браузер. (Cookie-файл - это просто небольшой текстовый файл, содержащий последовательность символьных данных). Если Вы разрешаете прием наших cookie-файлов, Вы получаете возможность сохранять пользовательские настройки для каждого нового сеанса работы. Большинство браузеров автоматически принимают cookie-файлы, при этом Вы можете изменить настройки браузера, чтобы он блокировал все cookie-файлы или сообщал Вам, когда Вам посылают cookie-файл. Некоторые функции и сервисы YouVersion могут не работать должным образом, если у Вас отключены cookie-файлы."   
+      cookies text:                             "При посещении Вами %{link}, мы можем отправить один или несколько cookie-файлов на Ваш компьютер, чтобы иметь возможность идентифицировать Ваш браузер. (Cookie-файл - это просто небольшой текстовый файл, содержащий последовательность символьных данных). Если Вы разрешаете прием наших cookie-файлов, Вы получаете возможность сохранять пользовательские настройки для каждого нового сеанса работы. Большинство браузеров автоматически принимают cookie-файлы, при этом Вы можете изменить настройки браузера, чтобы он блокировал все cookie-файлы или сообщал Вам, когда Вам посылают cookie-файл. Некоторые функции и сервисы YouVersion могут не работать должным образом, если у Вас отключены cookie-файлы."
       log title:                                "Содержимое журнала"
       log text:                                 "Когда Вы пользуетесь услугами LifeChurch.tv, наши серверы автоматически записывают информацию, отправляемую Вашим браузером при посещении одного из наших сайтов. Такие серверные журналы могут включать в себя такую информацию, как Ваши веб-запросы, IP-адрес, типа браузера, язык браузера, дата и время Вашего запроса, а также один или несколько cookie-файлов, при помощи которых возможна идентификация Вашего браузера."
       communications title:                     "Сообщения пользователя"
@@ -434,6 +436,7 @@ ru:
     you have no plans:                          "Вы ещё не подписаны на планы чтения."
     no public plans:                            "У %{username} нет публичных планов чтения."
     filter by lang:                             "Фильтровать планы по языку"
+    settings:                                   "Настройки"
     search:                                     "Поиск"
     search placeholder:                         "Искать в планах: %{category}"
     subscribe to plan:                          "Начать этот план"
